Assessement-2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simnple-app
          image: siddhumahi01/task
          ports:
            - containerPort: 3000
