Assessement-2/svc-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  selector:
    app: simple-app
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
