Assessement-2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "simple.app.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: simple-app-service
            port:
              number: 80
